Clone rundown api.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
       "@constants/*": ["src/constants/*"],
       "@utils/*": ["src/utils/*"],
       "@models/*": ["src/db/models/*"],
+      "@services/*": ["src/services/*"],
+      "@services": ["src/services"],
       "@models": ["src/db/models"],
       "@dbConfig": ["src/db/dbConfig"],
       "@dbConfig/*": ["src/db/dbConfig/*"],
