--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "ts-build": "rimraf build/ && tsc -p tsconfig.json",
     "build": "rimraf build/; babel src --extensions .js,.ts --out-dir build",
+    "prestart": "yarn build",
     "start": "node build/server.js",
     "start:dev": "nodemon",
     "dev": "yarn start:dev",
@@ -49,6 +50,7 @@
     "@types/mongodb-memory-server": "^2.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
+    "@types/node-schedule": "^2.1.0",
     "@types/rimraf": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
@@ -81,7 +83,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "@faker-js/faker": "^7.5.0",
+    "@faker-js/faker": "^7.6.0",
     "@types/compression": "^1.7.2",
     "@types/http-errors": "^1.8.2",
     "@types/jsonwebtoken": "^8.5.8",
@@ -105,8 +107,10 @@
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "node-schedule": "^2.1.1",
     "slugify": "^1.6.5",
     "swagger-ui-express": "^4.5.0"
   }
