--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
